Address SonarCloud issues on PR
- S3776: reduce cognitive complexity of waterLevelSplit (extract
  findWaterLevel + distributeRemainder), runCommands (extract
  runSingleCommand), and checkInventory (reuse countInInventory).
- S6204: use Stream.toList() instead of collect(Collectors.toList())
  for the new read-only lists.
- S6885: use Math.clamp instead of nested Math.min/Math.max.
- S2583/S2589: drop dead null checks on Player.getInventory() (never null).
- S5786: remove redundant public modifiers from JUnit 5 test classes and
  test/lifecycle methods across the test suite (base AbstractChallengesTest
  setUp/tearDown made protected so overrides remain valid).

Full suite green (458 tests).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015Jyeq1kNrXsAkNssTCTyqZ